src/main/java/com/example/demo/error/ErrorExceptionHandler.java
package com.example.demo.error;

import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class ErrorExceptionHandler {
    @ExceptionHandler(BusinessException.class)
    protected ResponseEntity<ErrorResponseDto> handleCustomException(BusinessException businessException) {
        return ErrorResponseDto.toResponseEntity(businessException.getErrorCode());
    }
}